Bug Fixed: href links
Solution: the transition I was using with the observer tool was translating in the y-direction. While it looks cool, this caused a problem where with each load, there'd be extra space in the y-direction which messed with the way the href worked. Changed to x-translation and it works fine. Looks just as fine too.

--- a/utilities.css
+++ b/utilities.css
@@ -3,14 +3,14 @@
 .hidden {
     opacity: 0;
     filter: blur(5px);
-    transform: translateY(-10%);
+    transform: translateX(-10%);
     transition: all 0.6s;
 }
 
 .show {
     opacity: 1;
     filter: blur(0);
-    transform: translateY(0);
+    transform: translateX(0);
 }
 
 
